[gd_scene load_steps=45 format=3 uid="uid://dey0s17ltu0m0"]

[ext_resource type="Script" uid="uid://cxkqsxx3k73lw" path="res://04_chs/ch_base_body.gd" id="1_swf5f"]
[ext_resource type="Script" uid="uid://6m1laamj5lii" path="res://04_chs/player/debug_button.gd" id="2_okaoq"]
[ext_resource type="Script" uid="uid://nt1obaxliu7" path="res://04_chs/player/debug_button2.gd" id="3_1tofp"]
[ext_resource type="Texture2D" uid="uid://bf3fdg7iq3cik" path="res://04_chs/player/768_4D_Character0.png" id="3_3e4bd"]
[ext_resource type="Texture2D" uid="uid://bq2abve17g0x7" path="res://04_chs/player/768_4D_Shadow.png" id="3_c2ii5"]
[ext_resource type="Script" uid="uid://6ir0sqmn5ayn" path="res://04_chs/player/player_camera.gd" id="4_1tofp"]
[ext_resource type="AudioStream" uid="uid://d2qobxwk8kn4o" path="res://02_audio/se/11_human_damage_3.wav" id="4_h2oy8"]
[ext_resource type="Script" uid="uid://do6y12jhkssnn" path="res://scripts/player_state_machine.gd" id="5_c2ii5"]
[ext_resource type="Script" uid="uid://bj8dqpn60h74f" path="res://scripts/state_idle.gd" id="6_u5vic"]
[ext_resource type="Script" uid="uid://c7ac8x4q8w8u" path="res://scripts/state_walk.gd" id="7_c8rlx"]
[ext_resource type="Script" uid="uid://drxxtk3ye6iev" path="res://scripts/state_attack.gd" id="9_3e4bd"]
[ext_resource type="AudioStream" uid="uid://dmtssmb8ah740" path="res://02_audio/se/56_Attack_03.wav" id="10_1tofp"]
[ext_resource type="Script" uid="uid://cbdr82kn864bu" path="res://04_chs/player/player_interactions.gd" id="12_c8rlx"]
[ext_resource type="PackedScene" uid="uid://2jqdcbgqff3p" path="res://07_genNodes/Hurtbox/Hurtbox.tscn" id="12_u5vic"]
[ext_resource type="Script" uid="uid://bfxbsouyehpqo" path="res://scripts/state_stun.gd" id="13_ibe34"]
[ext_resource type="Script" uid="uid://c5kscw3ffbwmq" path="res://04_chs/player/player_hud.gd" id="14_i50u7"]
[ext_resource type="PackedScene" uid="uid://dj2cq1vls5yxg" path="res://07_genNodes/Hitbox/hitbox.tscn" id="14_pikll"]
[ext_resource type="PackedScene" uid="uid://c0b2emprl2pdi" path="res://03_STATS/STATS.tscn" id="14_ytuny"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f5jf1"]
radius = 9.0
height = 20.0

[sub_resource type="Animation" id="Animation_l5ukk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_Idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D_Idle:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_okaoq"]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69]
}

[sub_resource type="Animation" id="Animation_3e4bd"]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77]
}

[sub_resource type="Animation" id="Animation_1tofp"]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [85, 84, 83, 82, 81, 80]
}

[sub_resource type="Animation" id="Animation_c2ii5"]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93]
}

[sub_resource type="Animation" id="Animation_3udkj"]
resource_name = "idle_down"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ler18"]
resource_name = "idle_left"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_y6m2g"]
resource_name = "idle_right"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_puul8"]
resource_name = "idle_up"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_pikll"]
resource_name = "stun_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_Idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.72549, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D_Idle:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_h2oy8")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_h2oy8"]
resource_name = "stun_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_Idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.72549, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D_Idle:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_h2oy8")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_ibe34"]
resource_name = "stun_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_Idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.72549, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D_Idle:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_h2oy8")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_3gc0y"]
resource_name = "stun_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [57]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_Idle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.72549, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D_Idle:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_h2oy8")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_vtd28"]
resource_name = "walk_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_l82qq"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 44, 43, 42, 41, 40]
}

[sub_resource type="Animation" id="Animation_wl145"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_3fg7g"]
resource_name = "walk_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5ukk"]
_data = {
&"RESET": SubResource("Animation_l5ukk"),
&"attack_down": SubResource("Animation_okaoq"),
&"attack_left": SubResource("Animation_3e4bd"),
&"attack_right": SubResource("Animation_1tofp"),
&"attack_up": SubResource("Animation_c2ii5"),
&"idle_down": SubResource("Animation_3udkj"),
&"idle_left": SubResource("Animation_ler18"),
&"idle_right": SubResource("Animation_y6m2g"),
&"idle_up": SubResource("Animation_puul8"),
&"stun_down": SubResource("Animation_pikll"),
&"stun_left": SubResource("Animation_h2oy8"),
&"stun_right": SubResource("Animation_ibe34"),
&"stun_up": SubResource("Animation_3gc0y"),
&"walk_down": SubResource("Animation_vtd28"),
&"walk_left": SubResource("Animation_l82qq"),
&"walk_right": SubResource("Animation_wl145"),
&"walk_up": SubResource("Animation_3fg7g")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_u5vic"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pikll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytuny"]
bg_color = Color(0.160784, 0.160784, 0.160784, 0.745098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i50u7"]
bg_color = Color(0.80531, 0, 0.198461, 1)

[sub_resource type="Theme" id="Theme_h67fg"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_ytuny")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_i50u7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h67fg"]
bg_color = Color(2.69532e-06, 0.717988, 0.36901, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwq4l"]
bg_color = Color(0, 0.634462, 0.960894, 1)

[node name="ch_player" type="CharacterBody2D"]
position = Vector2(48, 48)
collision_mask = 4358
script = ExtResource("1_swf5f")

[node name="Sprite2D_Idle" type="Sprite2D" parent="."]
texture = ExtResource("3_3e4bd")
hframes = 8
vframes = 16

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D_Idle"]
modulate = Color(0, 0, 0, 0.607843)
show_behind_parent = true
texture = ExtResource("3_c2ii5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 24)
scale = Vector2(1.4, 1.9)
shape = SubResource("CapsuleShape2D_f5jf1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l5ukk")
}

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
script = ExtResource("4_1tofp")

[node name="DEBUG_LAYER" type="CanvasLayer" parent="."]

[node name="DEBUG" type="Control" parent="DEBUG_LAYER"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="DEBUG_LAYER/DEBUG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 65.0
grow_horizontal = 0

[node name="Button" type="Button" parent="DEBUG_LAYER/DEBUG/HBoxContainer"]
layout_direction = 3
layout_mode = 2
text = "100.0"
script = ExtResource("2_okaoq")

[node name="Button2" type="Button" parent="DEBUG_LAYER/DEBUG/HBoxContainer"]
layout_direction = 3
layout_mode = 2
text = "100.0"
script = ExtResource("3_1tofp")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_c2ii5")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_u5vic")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("7_c8rlx")
move_speed = null

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("9_3e4bd")
attack_sound = ExtResource("10_1tofp")
deceleration_speed = null

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("13_ibe34")
metadata/_custom_type_script = "uid://mgrsrnjkhqq6"

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("12_c8rlx")

[node name="Hurtbox" parent="Interactions" instance=ExtResource("12_u5vic")]
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Hurtbox"]
position = Vector2(0, 42)
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_u5vic")
debug_color = Color(0.737255, 0, 0, 0.419608)

[node name="Hitbox" parent="Interactions" instance=ExtResource("14_pikll")]
collision_layer = 16
monitoring = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Hitbox"]
position = Vector2(0, 23)
scale = Vector2(1.45, 1.45)
shape = SubResource("CircleShape2D_pikll")
debug_color = Color(0.854902, 0.741176, 0, 0.419608)

[node name="playerHUD" type="CanvasLayer" parent="."]
script = ExtResource("14_i50u7")

[node name="FullScreen" type="Control" parent="playerHUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="stats_bars" type="VBoxContainer" parent="playerHUD/FullScreen"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 65.0

[node name="hp_bar" type="ProgressBar" parent="playerHUD/FullScreen/stats_bars"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_h67fg")
show_percentage = false

[node name="stm_bar" type="ProgressBar" parent="playerHUD/FullScreen/stats_bars"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_h67fg")
theme_override_styles/fill = SubResource("StyleBoxFlat_h67fg")
show_percentage = false

[node name="mp_bar" type="ProgressBar" parent="playerHUD/FullScreen/stats_bars"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_h67fg")
theme_override_styles/fill = SubResource("StyleBoxFlat_rwq4l")
show_percentage = false

[node name="Stats" parent="." instance=ExtResource("14_ytuny")]
